--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <ul *ngIf="mode=='list'">
   <p *ngIf = "notes.length === 0">Sem anotações</p>
   <li *ngFor = "let note of notes">
+    <p>{{note.title}}</p>
     <p>{{note.content}}</p>
     <button (click)="remove(note)">Remover</button>
   </li>
@@ -10,7 +11,10 @@
 <div *ngIf="mode=='add'">
   <h1>Nova Anotação</h1>
   <form [formGroup] = "form">
-    <input type="text" placeholder="Insira uma anotação" maxlength="60" formControlName="content" autofocus>
+    <label for="title">Title:</label>
+    <input type="text" id="title" placeholder="Insira um título" maxlength="60" formControlName="title" autofocus>
+    <label for="content">Content:</label>
+    <textarea id="content" name="content" rows="4" cols="50" formControlName="content"></textarea>
     <small *ngIf= "form.controls.content.invalid && !form.controls.content.pristine">*Este campo deve ter entre 10 e 60 caracteres</small>
     <button [disabled]="form.invalid" (click)="add()">Adicionar</button>
   </form>
