--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
-*{margin: 0; padding: 0; box-sizing: border-box;}
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+body {
+    margin: 0;
+    font-family: Roboto,"Helvetica Neue", sans-serif; }
+
 textarea{resize:none}
+
+.title{
+    text-align: center;
+    
+}
