--- a/src/app/pages/notes-list/notes-list.component.html
+++ b/src/app/pages/notes-list/notes-list.component.html
@@ -1,1 +1,11 @@
-<p>notes-list works!</p>
+<div class="main-container">
+    <div class="search-bar-container">
+        <p>
+            <input type="text" class="input" placeholder="Pesquise aqui...">
+        </p>
+    </div>
+
+    <div class="notes-list">
+        
+    </div>
+</div>
