Structuring this component

--- a/src/app/note-card/note-card.component.html
+++ b/src/app/note-card/note-card.component.html
@@ -1,1 +1,10 @@
-<p>note-card works!</p>
+<div #container class="note-card-container">
+    <div class="note-card-content">
+        <h1 class="note-card-title">{{ title }}</h1>
+
+        <div class="note-card-body">
+            <p>{{ body }}</p>
+        </div>
+    </div>
+    <div class="x-button"></div>
+</div>
