Add todo for future refactoring

--- a/src/app/pages/main-layout/main-layout.component.html
+++ b/src/app/pages/main-layout/main-layout.component.html
@@ -1,6 +1,7 @@
 <div class="layout-box">
     <div class="top-bar">
         <h1>Ang Notes</h1>
+        <!-- TODO: Fazer a tag de adição aqui -->
     </div>
     <div class="page-content">
         <router-outlet></router-outlet>
