Setting the main content to add note component

--- a/src/app/pages/note-details/note-details.component.html
+++ b/src/app/pages/note-details/note-details.component.html
@@ -1,5 +1,17 @@
 <div class="form-container">
-    <form #noteForm>
+    <form>
+        <div class="field">
+            <label class="label">Title</label>
+            <div class="control">
+                <input type="text" class="input">
+            </div>
+        </div>
 
+        <div class="field">
+            <label class="label">Body</label>
+            <div class="control">
+                <textarea class="textarea"></textarea>
+            </div>
+        </div>
     </form>
 </div>
