--- a/src/app/pages/notes-list/notes-list.component.html
+++ b/src/app/pages/notes-list/notes-list.component.html
@@ -6,6 +6,6 @@
     </div>
 
     <div class="notes-list">
-        <app-note-card title="Testing" body="Testing the component"></app-note-card>
+        <app-note-card></app-note-card>
     </div>
 </div>
