--- a/src/app/pages/main-layout/main-layout.component.css
+++ b/src/app/pages/main-layout/main-layout.component.css
@@ -1,38 +1,25 @@
-:root{
-    --background: #1b1b1b;
-    --button: #fc6e20;
-    --text: #323232;
-    --noteBackground: #ffe7d0;
+.example-spacer {
+    flex: 1 1 auto;
 }
 .layout-box{
-    display: flex;
-    flex-direction: column;
     height: 100%;
 
     overflow: hidden;
 }
-
-.top-bar{
-    width: 100%;
-    height: 50px;
-    background: linear-gradient(to right, #ffe7d0, #fff);
-
-    box-shadow: 0px 0px 10px 10px rgba(0, 0, 255, 0.15);
-
-    display: flex;
-    flex-shrink: 0;
-    justify-content: center;
-    align-items: center;
+.title{
+    font-size: 1.5rem;
 }
 
-.top-bar > h1{
-    padding: 0;
-    margin: 0;
-    color: #323232;
-    font-size: 2rem;
+.text{
+    font-size: 1rem;
+}
+
+mat-toolbar{
+    box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.15);
 }
 
 .page-content{
-    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
     overflow-y: scroll;
 }
