--- a/src/app/pages/note-details/note-details.component.css
+++ b/src/app/pages/note-details/note-details.component.css
@@ -1,24 +1,19 @@
-.form-container{
+:host {
     max-width: 500px;
-    margin: auto;
-    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
+form{
+    display: flex;
+    flex-direction: column;
+    max-width: 500px;
+}
 input, textarea{
     width: 100%;
-    background-color: rgba(219, 215, 215, .5);
-    border: none;
-    border-radius: .2rem;
 }
 
-input{
-    height: 1.5rem;
-    line-height: 1.4rem;
-}
-
-textarea{
-    height: 5rem;
-}
 
 .control{
     margin-bottom: .5rem;
