--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,9 @@ html, body { height: 100%; }
 
 body {
     margin: 0;
-    font-family: Roboto,"Helvetica Neue", sans-serif; }
+    font-family: Roboto,"Helvetica Neue", sans-serif;
+    background: #212121;
+}
 
 textarea{resize:none}
 
