--- a/src/app/pages/main-layout/main-layout.component.html
+++ b/src/app/pages/main-layout/main-layout.component.html
@@ -1,8 +1,12 @@
 <div class="layout-box">
-    <div class="top-bar">
-        <h1>Ang Notes</h1>
-        <!-- TODO: Fazer a tag de adição aqui -->
-    </div>
+    <mat-toolbar color="accent">
+        <mat-toolbar-row>
+            <span class="title">Ang Notes<mat-icon>article</mat-icon></span>
+            <span class="example-spacer"></span>
+            <button mat-raised-button color="primary"><mat-icon>add</mat-icon><span class="text">Note</span></button>
+          </mat-toolbar-row>
+    </mat-toolbar>
+    
     <div class="page-content">
         <router-outlet></router-outlet>
     </div>
