--- a/src/app/pages/main-layout/main-layout.component.html
+++ b/src/app/pages/main-layout/main-layout.component.html
@@ -3,7 +3,7 @@
         <mat-toolbar-row>
             <span class="title">Ang Notes<mat-icon>article</mat-icon></span>
             <span class="example-spacer"></span>
-            <button mat-raised-button color="primary"><mat-icon>add</mat-icon><span class="text">Note</span></button>
+            <button mat-raised-button (click)="addNote()" color="primary"><mat-icon>add</mat-icon><span class="text">Note</span></button>
           </mat-toolbar-row>
     </mat-toolbar>
     
