--- a/src/app/pages/notes-list/notes-list.component.html
+++ b/src/app/pages/notes-list/notes-list.component.html
@@ -6,6 +6,6 @@
     </div>
 
     <div class="notes-list">
-        <app-note-card></app-note-card>
+        <app-note-card *ngFor="let note of notes" [title]="note.title" [body]="note.body"></app-note-card>
     </div>
 </div>
