--- a/src/app/note-card/note-card.component.css
+++ b/src/app/note-card/note-card.component.css
@@ -17,7 +17,6 @@
 }
 
 .note-card-title{
-    /* TODO: Mudar cor depois */
     color: slategray;
 }
 
@@ -46,3 +45,7 @@
     opacity: 1;
     transform: scale(1);
 }
+
+/* .example-card {
+    max-width: 400px;
+  } */
