--- a/src/app/note-card/note-card.component.html
+++ b/src/app/note-card/note-card.component.html
@@ -8,3 +8,19 @@
     </div>
     <div class="x-button"></div>
 </div>
+<!-- TODO: Mudar para o material card 
+    <mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>{{ title }}</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p>
+        {{ body }}
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+        <div mat-button class="x-button"></div>
+    </mat-card-actions>
+  </mat-card>
+   -->
