Edit color buttons and the type

--- a/src/app/pages/form-dialog/form-dialog.component.html
+++ b/src/app/pages/form-dialog/form-dialog.component.html
@@ -19,6 +19,6 @@
 </div>
 
 <div mat-dialog-actions>
-  <button mat-button (click)="cancel()" color="warn">Cancelar</button>
-  <button mat-button (click)="addNote()" color="accent" [disabled]="form.invalid">Ok</button>
+  <button mat-stroked-button (click)="cancel()" color="warn">Cancelar</button>
+  <button mat-raised-button (click)="addNote()" color="accent" [disabled]="form.invalid">Ok</button>
 </div>
