Changed to material input

--- a/src/app/pages/notes-list/notes-list.component.html
+++ b/src/app/pages/notes-list/notes-list.component.html
@@ -1,8 +1,9 @@
 <div class="main-container">
     <div class="search-bar-container">
-        <p>
-            <input type="text" class="input" placeholder="Pesquise aqui...">
-        </p>
+        <mat-form-field  class="input">
+            <mat-label>Pesquise uma nota aqui...</mat-label>
+            <input matInput>
+        </mat-form-field>
     </div>
 
     <div class="notes-list">
