Changed the toolbar color

--- a/src/app/pages/main-layout/main-layout.component.html
+++ b/src/app/pages/main-layout/main-layout.component.html
@@ -1,9 +1,9 @@
 <div class="layout-box">
-    <mat-toolbar color="accent">
+    <mat-toolbar color="primary">
         <mat-toolbar-row>
             <span class="title">Ang Notes<mat-icon>article</mat-icon></span>
             <span class="example-spacer"></span>
-            <button mat-raised-button (click)="addNote()" color="primary"><mat-icon>add</mat-icon><span class="text">Anotação</span></button>
+            <button mat-raised-button (click)="addNote()" color="accent"><mat-icon>add</mat-icon><span class="text">Anotação</span></button>
           </mat-toolbar-row>
     </mat-toolbar>
     
