--- a/src/app/note-card/note-card.component.css
+++ b/src/app/note-card/note-card.component.css
@@ -1,23 +1,14 @@
 .note-card-container{
     position: relative;
-    background: #fff;
     border-radius: 5px;
 
-    box-shadow: 0px 2px 15px 2px rgba(0, 0, 255, 0.06);
+    box-shadow: 0px 2px 15px 2px rgba(255, 255, 255, 0.06);
     transition: box-shadow 0.2s ease-out;
 }
 
 .note-card-container:hover{
     cursor: pointer;
-    box-shadow: 0px px 0px 4px rgba(0, 0, 255, 0.06);
-}
-
-.note-card-content{
-    padding: 25px;
-}
-
-.note-card-title{
-    color: slategray;
+    box-shadow: 0px 0px 0px 4px rgba(255, 255, 255, 0.06);
 }
 
 .x-button{
@@ -30,22 +21,14 @@
 
     border-radius: 4px;
     
-    background-color: rgba(255, 0, 0, 0.322);
     background-image: url(../../assets/images/delete_icon.svg);
     background-repeat: no-repeat;
     background-position: center;
 
-    transform: scale(0.5);
-
-    opacity: 0.1;
-    transition: opacity 0.3s ease-out, transform 0.3s ease-out;
+    opacity: 0.5;
+    transition: opacity 0.3s ease-out;
 }
 
 .x-button:hover{
     opacity: 1;
-    transform: scale(1);
 }
-
-/* .example-card {
-    max-width: 400px;
-  } */
