Add method to exclude the note

--- a/src/app/note-card/note-card.component.html
+++ b/src/app/note-card/note-card.component.html
@@ -7,5 +7,5 @@
       {{ body }}
     </p>
   </mat-card-content>
-  <div mat-button class="x-button"></div>
+  <div mat-button class="x-button" (click)="exclude()"></div>
 </mat-card>
