Add animation property binding

--- a/src/app/pages/notes-list/notes-list.component.html
+++ b/src/app/pages/notes-list/notes-list.component.html
@@ -7,6 +7,10 @@
     </div>
 
     <div class="notes-list">
-        <app-note-card *ngFor="let note of notes" [title]="note.title" [body]="note.body"></app-note-card>
+        <app-note-card *ngFor="let note of notes, index as i" 
+                        (delete) = "deleteNote(i)"
+                        [@itemAnimate]
+                        [title]="note.title" 
+                        [body]="note.body"></app-note-card>
     </div>
 </div>
