Edit button content and add a div in the form for styling update form

--- a/src/app/pages/form-dialog/form-dialog.component.html
+++ b/src/app/pages/form-dialog/form-dialog.component.html
@@ -20,5 +20,5 @@
 
 <div mat-dialog-actions>
   <button mat-stroked-button (click)="cancel()" color="warn">Cancelar</button>
-  <button mat-raised-button (click)="addNote()" color="accent" [disabled]="form.invalid">Ok</button>
+  <button mat-raised-button (click)="addNote()" color="accent" [disabled]="form.invalid">Salvar</button>
 </div>
