--- a/src/app/pages/update-note/update-note.component.html
+++ b/src/app/pages/update-note/update-note.component.html
@@ -1,20 +1,22 @@
-<h1>Alterar Anotação <mat-icon>assignment_turned_in</mat-icon></h1>
-
-  <form [formGroup]= "form">
-
-    <mat-form-field>
-        <mat-label>Título</mat-label>
-        <input type="text" name="title" matInput formControlName="title">
-      </mat-form-field>
-    
+<div class="updateContainer">
+  <h1>Alterar Anotação <mat-icon>assignment_turned_in</mat-icon></h1>
+  
+    <form [formGroup]= "form">
+  
       <mat-form-field>
-        <mat-label>Anotação</mat-label>
-        <textarea matInput name="body" formControlName="body"></textarea>
-      </mat-form-field>
-    
-  </form>
-
-<div>
-  <button mat-stroked-button routerLink="/" color="warn">Cancelar</button>
-  <button mat-raised-button (click)="updateNote()" color="accent" [disabled]="form.invalid">Ok</button>
+          <mat-label>Título</mat-label>
+          <input type="text" name="title" matInput formControlName="title">
+        </mat-form-field>
+      
+        <mat-form-field>
+          <mat-label>Anotação</mat-label>
+          <textarea matInput name="body" formControlName="body"></textarea>
+        </mat-form-field>
+      
+    </form>
+  
+  <div>
+    <button mat-stroked-button routerLink="/" color="warn">Cancelar</button>
+    <button mat-raised-button (click)="updateNote()" color="accent" [disabled]="form.invalid">Alterar</button>
+  </div>
 </div>
