--- a/src/app/note-card/note-card.component.css
+++ b/src/app/note-card/note-card.component.css
@@ -32,3 +32,9 @@
 .x-button:hover{
     opacity: 1;
 }
+
+@media (max-width: 700px){
+    .note-card-container{
+        font-size: .5rem;
+    }
+}
