Start styling the mobile version

--- a/src/app/pages/form-dialog/form-dialog.component.css
+++ b/src/app/pages/form-dialog/form-dialog.component.css
@@ -6,3 +6,13 @@ form{
 .mat-inputs{
     width: 100%;
 }
+
+.mat-dialog-actions{
+    justify-content: center;
+}
+
+.mat-dialog-title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
