Changed the text

--- a/src/app/pages/notes-list/notes-list.component.html
+++ b/src/app/pages/notes-list/notes-list.component.html
@@ -14,6 +14,6 @@
                         [title]="note.title" 
                         [body]="note.body">
                     </app-note-card>
-        <p *ngIf="notes.length === 0">Não há notas salvas</p>
+        <p *ngIf="notes.length === 0">Adicione uma nova nota.</p>
     </div>
 </div>
