--- a/src/app/pages/update-note/update-note.component.html
+++ b/src/app/pages/update-note/update-note.component.html
@@ -5,12 +5,12 @@
 
     <mat-form-field>
         <mat-label>Título</mat-label>
-        <input type="text" name="title" [ngModel]="note.title" matInput placeholder="" formControlName="title">
+        <input type="text" name="title" [(ngModel)]="note.title" matInput placeholder="" formControlName="title">
       </mat-form-field>
     
       <mat-form-field>
         <mat-label>Anotação</mat-label>
-        <textarea matInput name="body" [ngModel]="note.body" formControlName="body"></textarea>
+        <textarea matInput name="body" [(ngModel)]="note.body" formControlName="body"></textarea>
       </mat-form-field>
     
   </form>
