--- a/src/app/pages/notes-list/notes-list.component.html
+++ b/src/app/pages/notes-list/notes-list.component.html
@@ -1,19 +1,22 @@
 <div class="main-container">
-    <div class="search-bar-container">
-        <mat-form-field  class="input">
-            <mat-label>Pesquise uma nota aqui...</mat-label>
-            <input type="text" matInput (keyup)="filterNote($event.target.value)">
-        </mat-form-field>
-    </div>
+  <div class="search-bar-container">
+    <mat-form-field class="input">
+      <mat-label>Pesquise uma nota aqui...</mat-label>
+      <input type="text" matInput (keyup)="filterNote($event.target.value)" />
+    </mat-form-field>
+  </div>
 
-    <div class="notes-list">
-        <app-note-card *ngFor="let note of filteredNotes, index as i" 
-                        (delete) = "deleteNote(i)"
-                        routerLink = "/{{ i }}"
-                        [@itemAnimate]
-                        [title]="note.title" 
-                        [body]="note.body">
-                    </app-note-card>
-        <p *ngIf="notes.length === 0">Adicione uma nova nota.</p>
-    </div>
+  <div class="notes-list">
+    <app-note-card
+      *ngFor="let note of filteredNotes; index as i"
+      (delete)="deleteNote(i)"
+      routerLink="/{{ i }}"
+      [@itemAnimate]
+      [title]="note.title"
+      [body]="note.body"
+    >
+    </app-note-card>
+    <p *ngIf="notes.length === 0">Adicione uma nova nota.</p>
+  </div>
 </div>
+
